Clean up + Job screen + new test data + Spring boot update